--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="links">
                 <a href="https://rohit1101.github.io/HBT/" title="Home" class="home">Home</a>
                 <a href="https://rohit1101.github.io/About/" title="About" class="about">About</a>
-                <a href="#" title="Contact" class="contact">Contact</a>
+                <a href="https://rohit1101.github.io/Contact/" title="Contact" class="contact">Contact</a>
             </div>
         </div>
     </div>
